[gd_scene load_steps=11 format=3 uid="uid://b63htkdr5kjxk"]

[ext_resource type="Script" uid="uid://d3otae7uu46w" path="res://Scripts/hud.gd" id="1_37p78"]
[ext_resource type="FontFile" uid="uid://7we6om3e3y5a" path="res://Fonts/SpaceShards-RpExo.ttf" id="2_64ctp"]
[ext_resource type="PackedScene" uid="uid://xpvqcnr0u5oj" path="res://Scenes/playerAttacks/fireballSpawner.tscn" id="2_640wx"]
[ext_resource type="PackedScene" uid="uid://ba588pyrmhlhy" path="res://Scenes/playerAttacks/fistSpawner.tscn" id="3_a2258"]
[ext_resource type="PackedScene" uid="uid://boi11dw0fn8rt" path="res://Scenes/playerAttacks/lightningSpawner.tscn" id="4_a2258"]
[ext_resource type="PackedScene" uid="uid://cf32ceetu56je" path="res://Scenes/playerAttacks/tornadoSpawner.tscn" id="5_36asn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_37p78"]
bg_color = Color(0.20452014, 0.34521127, 0.4255934, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_64ctp"]
bg_color = Color(0.21514505, 0.4861815, 0.86815435, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_36asn"]
bg_color = Color(0.5726692, 1.0227784e-06, 1.92523e-07, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8jye8"]
bg_color = Color(0.21568628, 0.4862745, 0, 1)

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_37p78")
fireballSpawner = ExtResource("2_640wx")
fistSpawner = ExtResource("3_a2258")
lightningSpawner = ExtResource("4_a2258")
tornadoSpawner = ExtResource("5_36asn")

[node name="XP" type="ProgressBar" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -519.0
offset_bottom = -443.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_37p78")
theme_override_styles/fill = SubResource("StyleBoxFlat_64ctp")
max_value = 10.0
show_percentage = false

[node name="Health" type="ProgressBar" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -380.0
offset_right = -1401.0
offset_bottom = -291.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_64ctp")
theme_override_font_sizes/font_size = 82
theme_override_styles/background = SubResource("StyleBoxFlat_36asn")
theme_override_styles/fill = SubResource("StyleBoxFlat_8jye8")
value = 50.0

[node name="LevelUp" type="Control" parent="."]
visible = false
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_left = 596.0
offset_top = 242.0
offset_right = 1306.0
offset_bottom = 841.0

[node name="ColorRect2" type="ColorRect" parent="LevelUp"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = -4.0
offset_right = 7.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="LevelUp"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.99607843, 0.99607843, 0.85490197, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="LevelUp"]
layout_mode = 0
offset_top = -4.0
offset_right = 716.0
offset_bottom = 112.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_64ctp")
theme_override_font_sizes/normal_font_size = 100
text = "Level Up"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="LevelUp"]
layout_mode = 0
offset_left = 11.0
offset_top = 124.0
offset_right = 698.0
offset_bottom = 722.0

[node name="Slot" type="Control" parent="LevelUp/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="LevelUp/VBoxContainer/Slot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.35686275, 0.5568628, 0, 1)

[node name="title" type="RichTextLabel" parent="LevelUp/VBoxContainer/Slot"]
layout_mode = 0
offset_top = 3.0
offset_right = 687.0
offset_bottom = 65.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_64ctp")
theme_override_font_sizes/normal_font_size = 54
text = "Fireball"
horizontal_alignment = 1
vertical_alignment = 1

[node name="description" type="RichTextLabel" parent="LevelUp/VBoxContainer/Slot"]
layout_mode = 0
offset_top = 67.0
offset_right = 687.0
offset_bottom = 150.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_64ctp")
theme_override_font_sizes/normal_font_size = 41
text = "Projectiles: 1 -> 2, Damage: 3 -> 5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="1" type="Button" parent="LevelUp/VBoxContainer/Slot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Slot2" type="Control" parent="LevelUp/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="LevelUp/VBoxContainer/Slot2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.8862745, 0.5137255, 0, 1)

[node name="title" type="RichTextLabel" parent="LevelUp/VBoxContainer/Slot2"]
layout_mode = 0
offset_top = 3.0
offset_right = 687.0
offset_bottom = 65.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_64ctp")
theme_override_font_sizes/normal_font_size = 54
text = "Lightning"
horizontal_alignment = 1
vertical_alignment = 1

[node name="description" type="RichTextLabel" parent="LevelUp/VBoxContainer/Slot2"]
layout_mode = 0
offset_top = 67.0
offset_right = 687.0
offset_bottom = 150.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_64ctp")
theme_override_font_sizes/normal_font_size = 41
text = "Projectiles: 0 -> 4, Damage: 0 -> 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="2" type="Button" parent="LevelUp/VBoxContainer/Slot2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Slot3" type="Control" parent="LevelUp/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="LevelUp/VBoxContainer/Slot3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.34872898, 0.6224446, 0.98377293, 1)

[node name="title" type="RichTextLabel" parent="LevelUp/VBoxContainer/Slot3"]
layout_mode = 0
offset_top = 3.0
offset_right = 687.0
offset_bottom = 65.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_64ctp")
theme_override_font_sizes/normal_font_size = 54
text = "Player"
horizontal_alignment = 1
vertical_alignment = 1

[node name="description" type="RichTextLabel" parent="LevelUp/VBoxContainer/Slot3"]
layout_mode = 0
offset_top = 67.0
offset_right = 687.0
offset_bottom = 150.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_64ctp")
theme_override_font_sizes/normal_font_size = 41
text = "Speed: 100 -> 105, Health: 100 -> 110"
horizontal_alignment = 1
vertical_alignment = 1

[node name="3" type="Button" parent="LevelUp/VBoxContainer/Slot3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Weapons" type="Control" parent="."]
visible = false
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_left = 596.0
offset_top = 242.0
offset_right = 1306.0
offset_bottom = 841.0

[node name="ColorRect2" type="ColorRect" parent="Weapons"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = -4.0
offset_right = 7.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="Weapons"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.99607843, 0.99607843, 0.85490197, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="Weapons"]
layout_mode = 0
offset_top = -4.0
offset_right = 716.0
offset_bottom = 112.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_64ctp")
theme_override_font_sizes/normal_font_size = 100
text = "Weapon Select"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Weapons"]
layout_mode = 0
offset_left = 11.0
offset_top = 124.0
offset_right = 698.0
offset_bottom = 722.0

[node name="Slot" type="Control" parent="Weapons/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Weapons/VBoxContainer/Slot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.35686275, 0.5568628, 0, 1)

[node name="title" type="RichTextLabel" parent="Weapons/VBoxContainer/Slot"]
layout_mode = 0
offset_top = 3.0
offset_right = 687.0
offset_bottom = 65.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_64ctp")
theme_override_font_sizes/normal_font_size = 54
text = "Fireball"
horizontal_alignment = 1
vertical_alignment = 1

[node name="description" type="RichTextLabel" parent="Weapons/VBoxContainer/Slot"]
layout_mode = 0
offset_top = 67.0
offset_right = 687.0
offset_bottom = 150.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_64ctp")
theme_override_font_sizes/normal_font_size = 41
text = "I don't care how big the room is"
horizontal_alignment = 1
vertical_alignment = 1

[node name="fireball" type="Button" parent="Weapons/VBoxContainer/Slot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Slot2" type="Control" parent="Weapons/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Weapons/VBoxContainer/Slot2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.8862745, 0.5137255, 0, 1)

[node name="title" type="RichTextLabel" parent="Weapons/VBoxContainer/Slot2"]
layout_mode = 0
offset_top = 3.0
offset_right = 687.0
offset_bottom = 65.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_64ctp")
theme_override_font_sizes/normal_font_size = 54
text = "Lightning"
horizontal_alignment = 1
vertical_alignment = 1

[node name="description" type="RichTextLabel" parent="Weapons/VBoxContainer/Slot2"]
layout_mode = 0
offset_top = 67.0
offset_right = 687.0
offset_bottom = 150.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_64ctp")
theme_override_font_sizes/normal_font_size = 41
text = "kerzap"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lightning" type="Button" parent="Weapons/VBoxContainer/Slot2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Slot3" type="Control" parent="Weapons/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Weapons/VBoxContainer/Slot3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.34872898, 0.6224446, 0.98377293, 1)

[node name="title" type="RichTextLabel" parent="Weapons/VBoxContainer/Slot3"]
layout_mode = 0
offset_top = 3.0
offset_right = 687.0
offset_bottom = 65.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_64ctp")
theme_override_font_sizes/normal_font_size = 54
text = "Fist"
horizontal_alignment = 1
vertical_alignment = 1

[node name="description" type="RichTextLabel" parent="Weapons/VBoxContainer/Slot3"]
layout_mode = 0
offset_top = 67.0
offset_right = 687.0
offset_bottom = 150.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_64ctp")
theme_override_font_sizes/normal_font_size = 41
text = "Express your anger"
horizontal_alignment = 1
vertical_alignment = 1

[node name="fist" type="Button" parent="Weapons/VBoxContainer/Slot3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Slot4" type="Control" parent="Weapons/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Weapons/VBoxContainer/Slot4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.8352941, 0, 0.2509804, 1)

[node name="title" type="RichTextLabel" parent="Weapons/VBoxContainer/Slot4"]
layout_mode = 0
offset_top = 3.0
offset_right = 687.0
offset_bottom = 65.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_64ctp")
theme_override_font_sizes/normal_font_size = 54
text = "Tornado"
horizontal_alignment = 1
vertical_alignment = 1

[node name="description" type="RichTextLabel" parent="Weapons/VBoxContainer/Slot4"]
layout_mode = 0
offset_top = 67.0
offset_right = 687.0
offset_bottom = 150.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_64ctp")
theme_override_font_sizes/normal_font_size = 41
text = "Blow them away"
horizontal_alignment = 1
vertical_alignment = 1

[node name="tornado" type="Button" parent="Weapons/VBoxContainer/Slot4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Over" type="Control" parent="."]
visible = false
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_left = 596.0
offset_top = 455.0
offset_right = 1306.0
offset_bottom = 786.0

[node name="ColorRect2" type="ColorRect" parent="Over"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = -4.0
offset_right = 7.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="Over"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.99607843, 0.99607843, 0.85490197, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="Over"]
layout_mode = 0
offset_top = -4.0
offset_right = 716.0
offset_bottom = 112.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_64ctp")
theme_override_font_sizes/normal_font_size = 100
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect3" type="ColorRect" parent="Over"]
z_index = 1
layout_mode = 0
offset_left = 55.0
offset_top = 177.0
offset_right = 657.0
offset_bottom = 277.0
mouse_filter = 2
color = Color(0.6589113, 1.2273341e-06, 9.62615e-08, 1)

[node name="ColorRect4" type="ColorRect" parent="Over/ColorRect3"]
z_index = -1
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 604.0
offset_bottom = 102.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Dead" type="Button" parent="Over/ColorRect3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="Over/ColorRect3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("2_64ctp")
theme_override_font_sizes/normal_font_size = 84
text = "Restart"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="LevelUp/VBoxContainer/Slot/1" to="." method="_on__pressed"]
[connection signal="pressed" from="LevelUp/VBoxContainer/Slot2/2" to="." method="_on_two_pressed"]
[connection signal="pressed" from="LevelUp/VBoxContainer/Slot3/3" to="." method="_on_three_pressed"]
[connection signal="pressed" from="Weapons/VBoxContainer/Slot/fireball" to="." method="_on_fireball_pressed"]
[connection signal="pressed" from="Weapons/VBoxContainer/Slot2/lightning" to="." method="_on_lightning_pressed"]
[connection signal="pressed" from="Weapons/VBoxContainer/Slot3/fist" to="." method="_on_fist_pressed"]
[connection signal="pressed" from="Weapons/VBoxContainer/Slot4/tornado" to="." method="_on_tornado_pressed"]
[connection signal="pressed" from="Over/ColorRect3/Dead" to="." method="_on_dead_pressed"]
